<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Контакт справа вверху -->
    <LinearLayout
        android:id="@+id/contactBlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvSupport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/text_support"
            android:textColor="#222B45"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:includeFontPadding="false"
            android:text="+995 550 500 500"
            android:textColor="#379ED8"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="666dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/text_who_take_delivery"
        android:textAlignment="center"
        android:textColor="@color/dark_blue"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImage" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_another"
        style="@style/Deselected"
        android:layout_width="323dp"
        android:layout_height="351dp"
        android:layout_marginTop="24dp"
        android:gravity="top|center"
        android:paddingVertical="20dp"
        android:text="@string/text_send_other_person"
        android:textAlignment="gravity"
        android:textColor="@color/shadow_black"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:strokeColor="@color/black_10"
        app:strokeWidth="1dp" />

    <ImageView
        android:id="@+id/iv_other"
        android:layout_width="160dp"
        android:layout_height="238dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/image_for_other"
        app:layout_constraintBottom_toBottomOf="@id/btn_another"
        app:layout_constraintEnd_toEndOf="@id/btn_another"
        app:layout_constraintStart_toStartOf="@id/btn_another" />

    <ImageView
        android:id="@+id/iv_take_later"
        android:layout_width="160dp"
        android:layout_height="238dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/image_take_later"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="@id/btn_self"
        app:layout_constraintEnd_toEndOf="@id/btn_self"
        app:layout_constraintStart_toStartOf="@id/btn_self" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_self"
        style="@style/Deselected"
        android:layout_width="323dp"
        android:layout_height="351dp"
        android:layout_marginTop="24dp"
        android:gravity="top|center"
        android:paddingVertical="20dp"
        android:text="@string/text_take_self"
        android:textAlignment="gravity"
        android:textColor="@color/shadow_black"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:strokeColor="@color/black_10"
        app:strokeWidth="1dp" />

    <!-- Кнопки внизу -->
    <Button
        android:id="@+id/btnBack"
        style="@style/WhiteRoundedBtn"
        android:layout_width="185dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/text_back"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnContinue"
        style="@style/BlueRoundedBtn"
        android:layout_width="185dp"
        android:layout_height="70dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/text_next"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>