<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="16dp"
    app:strokeWidth="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:paddingVertical="40dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="@color/transparent"
            app:layout_constraintBottom_toTopOf="@id/btn_accept"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/black_30"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="8dp"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_tight_bold_700"
                    android:includeFontPadding="false"
                    android:text="@string/text_terms_of_offer_title"
                    android:textColor="@color/dark_blue"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/inter_tight_medium_500"
                    android:text="@string/text_terms_of_offer_desc"
                    android:textColor="@color/black"
                    android:scrollbars="vertical"
                    android:textSize="16sp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_accept"
            style="@style/BlueRoundedBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_familiarized"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>